log
Fri Mar 18 14:36:46 UTC 2022: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:5: error: unknown type name ‘list’; did you mean ‘List’?
     list * lista = (list*) malloc(sizeof(list));
     ^~~~
     List
list.c:33:21: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
     list * lista = (list*) malloc(sizeof(list));
                     ^~~~
                     lista
list.c:33:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:26: error: expected expression before ‘)’ token
     list * lista = (list*) malloc(sizeof(list));
                          ^
list.c:34:10: error: request for member ‘head’ in something not a structure or union
     lista->head = NULL;
          ^~
list.c:35:10: error: request for member ‘tail’ in something not a structure or union
     lista->tail = NULL;
          ^~
list.c:36:10: error: request for member ‘current’ in something not a structure or union
     lista->current = NULL;
          ^~
list.c:38:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return lista;
            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
62bfd40
Fri Mar 18 14:37:51 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
82f0cd3
Fri Mar 18 14:53:57 UTC 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:47:3: error: expected ‘;’ before ‘return’
   return (list->current->data);
   ^~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
ca75a85
Fri Mar 18 14:54:28 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:47:3: error: expected ‘;’ before ‘return’
   return list->current->data;
   ^~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
0bbd318
Fri Mar 18 14:54:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
38d724f
Fri Mar 18 14:58:22 UTC 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
4f18ea7
Fri Mar 18 15:01:09 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3e3f610
Fri Mar 18 15:07:14 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
d708945
Fri Mar 18 15:08:26 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
192f652
Fri Mar 18 19:37:16 HSP 2022: 
 tests:  3|5
total_score: 15/70
bc08470
Fri Mar 18 19:39:44 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
96a16fc
Fri Mar 18 19:40:26 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac670b4
Fri Mar 18 19:44:05 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
12ceae7
Fri Mar 18 19:50:41 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
6b256fa
Fri Mar 18 20:27:47 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e661955
Fri Mar 18 20:28:39 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
bc9b8de
Fri Mar 18 20:29:56 HSP 2022: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
9e0b6a9
Fri Mar 18 20:31:46 HSP 2022: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  10|2
total_score: 45/70
f9f2026
Fri Mar 18 20:34:25 HSP 2022: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  11|1
total_score: 55/70
6367e30
